--- a/default.conf
+++ b/default.conf
@@ -15,6 +15,11 @@ server {
         proxy_pass http://georoute:3000/;
     }
 
+    location /geoip/ {
+        rewrite ^/geoip/$ / break;
+        proxy_pass http://geoip:4000/;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
