--- a/default.conf
+++ b/default.conf
@@ -12,12 +12,12 @@ server {
 
     location /georoute/ {
         rewrite ^/georoute/$ / break;
-        proxy_pass http://georoute:3000/;
+        proxy_pass http://georoute.tech:3000/;
     }
 
     location /geoip/ {
         rewrite ^/geoip/$ / break;
-        proxy_pass http://geoip:4000/;
+        proxy_pass http://geoip.tech:4000/;
     }
 
     #error_page  404              /404.html;
