Revert url change

--- a/geoip.conf
+++ b/geoip.conf
@@ -3,7 +3,7 @@ server {
     server_name geoip.tech;
 
     location / {
-        proxy_pass http://geoip.tech:4000;
+        proxy_pass http://geoip:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
