--- a/georoute.conf
+++ b/georoute.conf
@@ -3,7 +3,7 @@ server {
     server_name georoute.tech;
 
     location / {
-        proxy_pass http://georoute.tech:3000;
+        proxy_pass http://georoute:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
