--- a/georoute.conf
+++ b/georoute.conf
@@ -10,4 +10,18 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+    
+    location ~* \.(?:html?)$ {
+        expires -1;
+    }
+    
+    location ~* \.(?:css|js)$ {
+        expires 1M;
+        add_header Cache-Control "public";
+    }
+    
+    location ~* \.(?:jpg|jpeg|gif|png|ico|svg|svgz|woff2)$ {
+        expires 1M;
+        add_header Cache-Control "public";
+    }
 }
