--- a/georoute.conf
+++ b/georoute.conf
@@ -11,3 +11,17 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 }
+
+server {
+    listen 80;
+    server_name georoute.site;
+
+    location / {
+        proxy_pass http://georoute:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+}
