--- a/georoute.conf
+++ b/georoute.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name georoute.site;
+    server_name georoute.xyz;
 
     location / {
         proxy_pass http://georoute:3000;
